--- a/src/index.scss
+++ b/src/index.scss
@@ -13,7 +13,7 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
@@ -110,6 +110,43 @@ body {
     justify-items: start;
     justify-content: flex-start;
     gap: 8px;
+}
+
+.form-view {
+    font-family: Roboto, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    letter-spacing: 0.00938em;
+    text-align: center;
+
+    .form-user {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .user-name {
+            margin: 0px 0px 0px 16px;
+            font-size: 16px;
+            font-weight: 700;
+        }
+    }
+
+    .form-title {
+        margin: 16px 0px 0px;
+        font-size: 24px;
+        font-weight: 700;
+    }
+
+    .form-subtitle {
+        margin: 16px 0px 0px;
+        font-size: 16px;
+        font-weight: 700;
+    }
+
+    .form-description {
+        margin: 16px 0px 0px;
+        font-size: 14px;
+        font-weight: 500;
+    }
 }
 
 .questions-wrapper {
