completed questions page

--- a/src/index.scss
+++ b/src/index.scss
@@ -260,6 +260,39 @@ body {
             }
         }
     }
+
+    .option-container {
+        margin-top: 16px;
+        display: flex;
+        -webkit-box-align: center;
+        align-items: center;
+        width: 100%;
+
+        .action-button {
+            user-select: none;
+            width: 1em;
+            height: 1em;
+            display: inline-block;
+            fill: currentcolor;
+            flex-shrink: 0;
+            transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+            font-size: 1.5rem;
+            margin-left: 40px;
+            cursor: pointer;
+
+            &:hover {
+                color: rgb(150, 0, 26);
+            }
+        }
+    }
+
+    .add-option {
+        margin-top: 10px;
+        color: rgb(48, 111, 219);
+        font-weight: 700;
+        font-size: 15px;
+        cursor: pointer;
+    }
 }
 
 .add-question {
@@ -277,7 +310,7 @@ body {
 }
 
 @media (min-width: 600px) {
-    .text-box {
+    .text-box, .option-wrapper {
         width: 70%;
         margin-bottom: 0px;
     }
