--- a/src/index.scss
+++ b/src/index.scss
@@ -296,7 +296,7 @@ body {
     }
 
     &.view {
-        gap: 0!important;
+        gap: 0 !important;
         .required {
             margin-top: 1.6px;
             display: flex;
@@ -341,6 +341,36 @@ body {
     letter-spacing: 0.00938em;
     padding: 8px;
     text-transform: uppercase;
+}
+
+.user-card {
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    padding: 8px;
+    margin-right: 4px;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    border-radius: 8px;
+    position: relative;
+
+    .remove-button {
+        font-size: 1rem;
+        line-height: 1.5;
+        letter-spacing: 0.00938em;
+        color: rgb(48, 111, 219);
+        text-align: right;
+        display: none;
+        font-weight: 700;
+    }
+
+    &:hover .remove-button {
+        display: inline-flex;
+    }
+
+    &.can-hover:hover {
+        background-color: rgb(240, 240, 240);
+    }
 }
 
 @media (min-width: 600px) {
